@@ -1,3 +1,8 @@
+Wed Sep 14 07:54:28 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * bin/PerlACE/TestTarget_Android.pm:
+          Adding of libpath is only needed for non static builds
+
 Tue Sep 13 08:12:40 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * bin/TestTarget.pm:
